Tejas: Create a Dropdown or Input for Course Selection

--- a/index.html
+++ b/index.html
@@ -7,5 +7,14 @@
 </head>
 <body>
     <!-- add more  -->
+ <!-- Dropdown for course selection -->
+ <label for="course-dropdown">Select Course:</label>
+ <select id="course-dropdown" name="course">
+   <option value="" disabled selected>-- Choose a course --</option>
+   <option value="cs">Computer Science</option>
+   <option value="math">Mathematics</option>
+   <option value="eng">Engineering</option>
+   <option value="bio">Biology</option>
+ </select>
 </body>
 </html>
