--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>registration form</title>
 </head>
+
+
+
 <body>
+  <form onsubmit="return validateForm()">
+    <!-- Form fields here -->
+  
+  
     <!-- add more  -->
  <!-- Dropdown for course selection -->
  <label for="course-dropdown">Select Course:</label>
@@ -16,5 +23,8 @@
    <option value="eng">Engineering</option>
    <option value="bio">Biology</option>
  </select>
+ </form>
 </body>
+
+
 </html>
