--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>registration form</title>
 </head>
 <body>
+        <!-- For each feild make sure to name accrodingly cause i want to use in javascript for showing alert to user  -->
 
     <!-- Email input field -->
     <form>
