textarea for address

--- a/index.html
+++ b/index.html
@@ -36,5 +36,12 @@
         <option value="eng">Engineering</option>
         <option value="bio">Biology</option>
     </select>
+
+    <!-- Textarea for Address -->
+    <form>
+        <label for="address">Address:</label>
+        <textarea id="address" name="address"rows = "4" cols ="50" 
+        placeholder="Enter your address here..."></textarea>
+    </form>
 </body>
 </html>
